--- a/1-guia/ejercicios-1/ej-9-1.tex
+++ b/1-guia/ejercicios-1/ej-9-1.tex
@@ -5,7 +5,7 @@
 Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en en apunte.}
 
 \begin{itemize}
-  \item[$\magenta{\entonces}$)] Quiero probar que:
+  \item[($\magenta{\Rightarrow}$)] Quiero probar que:
         $$
           \ub{\partes(A) \subseteq \partes(B)}{\purple{\text{hipótesis}}}  \magenta{\entonces} \ub{A \subseteq B}{\text{tesis}}
         $$
@@ -38,13 +38,14 @@ Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en
 
         Si el conjunto $\set{x}$ está en $\partes(B)$ entonces por la definición
         del conjunto de partes el elemento $x$ tiene que estar en $B$.\par
-        Esto es un absurdo, porque arranqué diciendo en $\llamada1$ que $x \notin B$ y ahora que $x \en B$. Absurdo $\skull$.\par
+        Esto es un absurdo, porque arranqué diciendo en $\llamada1$ que $x \notin B$ y ahora que $x \en B$. Absurdo \faIcon{skull}.
+
         Como mi supuesto resulto falso, debido a la lógica que está en las \hyperlink{teoria-1:absurdo}{notas teóricas sobre mostrar por absurdo} concluyo que:
         $$
           \boxed{\partes(A) \subseteq \partes(B) \entonces A \subseteq B}\Tilde
         $$
 
-  \item[$\magenta{\Leftarrow}$)] Quiero probar que:
+  \item[($\magenta{\Leftarrow}$)] Quiero probar que:
         $$
           \ub{A \subseteq B}{\text{\purple{hipótesis}}} \magenta{\entonces} \partes(A) \subseteq \partes(B)
         $$
