--- a/5-guia/ejercicios-5-extra/ej-extra-12-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-12-5.tex
@@ -100,7 +100,7 @@ $$
   \Sii{def}
   \congruencia{6^4 + 10^{25} + 19}{0}{25}
   \Sii{\red{!}}
-  \congruencia{21 + 0 + 19}{15 \not\equiv 0 }{25} \quad\red{\skull}
+  \congruencia{21 + 0 + 19}{15 \not\equiv 0 }{25} \quad \text{\red{\faIcon{skull}}}
 $$
 
 \bigskip
