--- a/5-guia/ejercicios-5-extra/ej-extra-13-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-13-5.tex
@@ -26,7 +26,7 @@ $$
   \congruencia{a^{831}}{6}{7}
   \sii
   \llave{l}{
-    \Sii{$\congruencia{a}{0}{7}$} \congruencia{0}{6}{7} \red{\skull} \\
+    \Sii{$\congruencia{a}{0}{7}$} \congruencia{0}{6}{7} \text{ \red{\faIcon{skull}}} \\
     \Sii{$\noCongruencia{a}{0}{7}$}[PTF]
     \congruencia{a^3}{6}{7}
     \Sii{\red{!!}}[$\llamada3$]
@@ -45,7 +45,7 @@ $$
   \congruencia{4a^{831}}{6}{11}
   \sii
   \llave{l}{
-    \Sii{$\congruencia{a}{0}{11}$} \congruencia{0}{6}{11} \red{\skull} \\
+    \Sii{$\congruencia{a}{0}{11}$} \congruencia{0}{6}{11} \text{ \red{\faIcon{skull}}} \\
     \Sii{$\noCongruencia{a}{0}{11}$}[PTF]
     \congruencia{4a^1}{6}{11}
     \Sii{$3 \cop 11$}
