--- a/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
@@ -46,7 +46,7 @@ $$
     \boxed{\congruencia{n}{0}{7} }\Tilde\llamada1\\
     % --
     \Sii{PTF, 7 es primo}[$\noCongruencia{n}{0}{7}$]
-    \congruencia{n}{0}{7} \to \text{incompatible } \red{\skull}
+    \congruencia{n}{0}{7} \to \text{incompatible  \red{\faIcon{skull}}}
   }
 $$
 
