--- a/6-guia/ejercicios-6/ej-9-6.tex
+++ b/6-guia/ejercicios-6/ej-9-6.tex
@@ -36,13 +36,13 @@ $$
   \begin{array}{l}
     \re(3z^5) = 3 \cdot \frac{z^5 + \conj z^5}{2} =
     3 \cdot \frac{|z|^5 e^{5\theta i} + |z|^5 e^{-5\theta i}}{2} =
-    3|z|^5 \cos(5\theta) =  -2|z|^5 - 32 \sii                          \\
+    3|z|^5 \cos(5\theta) =  -2|z|^5 - 32 \sii                                         \\
     \sii
     |z|^5(3\cos(5\theta) + 2) = -2^5
     \flecha{evaluando}[en $\theta_k \llamada1$]
     |z|^5(3\cos(k\pi) + 2) = -2^5
     \llave{cl}{
-    \flecha{$k$}[par]   & 0 < |z|^5(3 + 2) \distinto -2^5 \quad \skull \\
+    \flecha{$k$}[par]   & 0 < |z|^5(3 + 2) \distinto -2^5 \quad \text{\faIcon{skull}} \\
     \flecha{$k$}[impar] & |z|^5(-3 + 2) = -2^5 \sii |z| = 2
     }
   \end{array}
