--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -57,7 +57,7 @@
   colorlinks=true,
   pdfborder={0 0 0}, % sin border
   citecolor=cyan,
-  refcolor=magenta,
+  % refcolor=magenta,
   linkcolor=blue!80!red,
   filecolor=green,
   urlcolor=red!10!purple,
