fix and remaster extra 2 guia 5

--- a/6-guia/ejercicios-6-extra/ej-extra-4-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-4-6.tex
@@ -7,7 +7,7 @@
   Expresar la solución como una única ecuación de congruencia.
 \end{enunciado}
 
-Dado que:
+Por enunciado tengo que:
 $$
   w = e^{\frac{1}{18} \pi i}
   \sii
@@ -37,7 +37,7 @@ $$
     \congruencia{5n}{10}{12}\llamada1
   \end{array}
 $$
-Y tenemos una ecuación. Ahora calculamos la otra sumatoria:
+Y tenemos una ecuación. Calculo la otra sumatoria:
 $$
   \sumatoria{k=0}{4n+6}w^{4k} =
   \sumatoria{k=0}{4n+6}(w^4)^k =
@@ -79,13 +79,11 @@ $$
     \congruencia{n}{5}{9}
   }
   \flecha{$9 \cop 4$ hay}[solución por \href{\chinito}{TCR}]
-  \boxed{\congruencia{n}{14}{36}} \Tilde
+  \cajaResultado{\congruencia{n}{14}{36}}
 $$
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
 \end{aportes}
