--- a/6-guia/ejercicios-6-extra/ej-extra-8-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-8-6.tex
@@ -6,17 +6,18 @@
   $$
 \end{enunciado}
 
+\begin{center}
+  $\to$ Mirá \hyperlink{teoria6:propiedadesGn}{estas propiedades} y  \hyperlink{teoria6:gruposGn}{estos gráficos} para sacar intuición de lo que viene
+\end{center}
+
+Del enunciado y propiedades de estos números de $G_n$:
 $$
   \omega = e^{i\frac{2\pi }{33}}
   \Sii{\red{!}}
   \conj{\omega}^6 = e^{i\frac{18\pi }{11}}
 $$
 
-\begin{center}
-  $\to$ Mirá \hyperlink{teoria6:propiedadesGn}{estas propiedades} y  \hyperlink{teoria6:gruposGn}{estos gráficos} para sacar intuición de lo que viene
-\end{center}
-
-Para que ese número espantoso esté en $G_{2n+1}$ debe ocurrir que \red{!!}:
+Para que ese número espantoso  $\conj{\omega}^6 \en G_{2n+1}$ debe ocurrir que \red{!!}:
 $$
   11 \divideA 2n+1
   \Sii{def}
@@ -25,7 +26,7 @@ $$
   \congruencia{n}{5}{11} \llamada1
 $$
 
-Por otro lado para que la sumatoria esa de cero, sabiendo que $\omega \distinto 1$, suma geométrica:
+Por otro lado para que la sumatoria del enunciado de cero, sabiendo que $\omega \distinto 1$, uso suma geométrica:
 $$
   \sumatoria{j=0}{n+4} \omega^{11j}
   =
