--- a/5-guia/ejercicios-5-extra/ej-extra-2-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-2-5.tex
@@ -109,18 +109,18 @@ $$
 
 \textit{\underline{Divisibilidad por 9}}.
 
-Teniendo en cuenta que los posibles MCD, son todos potencias de 3 y que $\congruencia{a}{0}{3}$
+Teniendo en cuenta que los posibles MCD, son todos potencias de 3 y que $\blue{\congruencia{a}{0}{3}}$
 \textit{¿Es la expresión $a^{97} - 36$ divisible por 9 para alguno de los valores de $a$ permitidos?}:
 $$
   \congruencia{a^{97} - 36 }{0}{9}
+  \Sii{$\blue{\congruencia{a}{0}{3}}$}[$\Rightarrow a = \blue{3k}$]
+  \congruencia{(\blue{3k})^{97} \igual{\red{!!}} 3 \cdot (\ua{\blue{3^2})}{9}^{48} \cdot k^{97}}{0}{9}
   \sii
-  \congruencia{a^{97}}{0}{9}
-  \Sii{$\blue{\congruencia{a}{0}{3}} \entonces \congruencia{a}{0}{9}$}
   \congruencia{0}{0}{9}
 $$
 
-Se concluye que la expresión $a^{97} - 36$ es divisible por 9 para $\congruencia{a}{0}{9}$ los cuales son valores que cumplen
-$\congruencia{a}{0}{3}$. De esa manera \ul{descarto que el 3 pueda ser MCD}.
+Se concluye que la expresión $a^{97} - 36$ es divisible por 9 para los a que cumplen $\congruencia{a}{0}{3}$.
+De esa manera \ul{destronando al 3 como posible MCD}.
 
 \bigskip
 
@@ -145,28 +145,38 @@ Se concluye que la expresión $a^{97} - 36$ no es divisible por 27 para ninguno 
 
 \bigskip
 
-Hasta el momento obtuvimos que $\set{9}$ es el único MCD posible. Falta analizar el caso del 1:
+Hasta el momento obtuvimos que $\set{9}$ es el único MCD posible.
+
+Falta analizar el caso del MCD = 1:
 
 Encuentro que si:
 $$
-  a = 4
+  \ub{a = 4}{\text{a ojímetro}}
   \entonces
   \congruencia{4^{97} - 36}{0}{3}
   \sii
   \congruencia{1}{0}{3}
 $$
-Entonces $a = 4$ es un valor de $a$ para el cual el MCD no es divisible por 3, por lo que:
+Entonces $a = 4$ es un valor de $a$ para el cual el MCD no es divisible por 3, por lo que tampoco por 9:
 $$
   (4^{97} -36 : 135) = 1.
 $$
-De esta formar $a =4$ es un valor permitido por $\blue{\congruencia{a}{4}{5} }$ y $\blue{\congruencia{a}{1}{3} }$.
-Concluyendo así que el 1 es \underline{otro} posible valor para el MCD.\par
-Posibles valores:
+De esta formar $a = 4$ es un valor permitido por la restricción $\blue{\congruencia{a}{4}{5}}$ y $\blue{\congruencia{a}{1}{3}}$.
+Concluyendo así que el 1 es \underline{otro posible valor para el MCD}.
+
+\bigskip
+
+\textit{Conclusión, posibles valores}:
 $$
   \cajaResultado{
     \text{MCD} \en \set{1, 9}
   }
 $$
+{
+    \tiny
+    \color{black!20!white}
+    Esto fue la fatality de sub-zero para el sega megadrive, espero que les haya gustado, chau!
+  }
 
 % Contribuciones
 \begin{aportes}
