--- a/6-guia/ejercicios-6-extra/ej-extra-6-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-6-6.tex
@@ -185,8 +185,9 @@ $$
   }
 $$
 
-Siendo objetivos, la solución del \ref{extra6-6:item2} es la más elegante lejos, la de \ref{extra6-6:item3} es un delirio,
-pero lo importante es llegar al resultado correcto!
+Siendo objetivos, la solución del \ref{extra6-6:item2} es la más elegante lejos, la de \ref{extra6-6:item3} es un delirio absoluto,
+y para hacer eso en un parcial hay que tener nitrógeno líquido en la venas,
+peeeeero lo importante es llegar al resultado correcto!
 Como dijo el \blue{Capitán Planeta}: \textit{¡El poder es tuyo!}
 
 \begin{aportes}
