--- a/7-guia/ejercicios-7-extra/ej-extra-15-7.tex
+++ b/7-guia/ejercicios-7-extra/ej-extra-15-7.tex
@@ -1,7 +1,7 @@
 \begin{enunciado}{\ejExtra}
 	Factorice en irreducibles de $\racionales[X], \reales[X], \text{ y } \complejos[X]$ el polinomio
 	$$
-		f = x^5 - x^4 -6x^3 + 12 x^2 + 40 x + 32,
+		f = x^5 - 4x^4 -6x^3 + 12 x^2 + 40 x + 32,
 	$$
 	sabiendo que tiene alguna raíz en común con $g = x^4 - x^3 - 9x^2 - 16x - 10$.
 \end{enunciado}
@@ -23,7 +23,7 @@ $$
 
 Este último resultado confirma que:
 $$
-	(f:g) = x^2 + 2x + 2 \igual{\red{!!}} (-1 + i)\cdot(-1 - i)
+        (f:g) = x^2 + 2x + 2 \igual{\red{!!}} (x - (-1 + i)) \cdot (x - (-1 - i))
 $$
 Reduzco a $f$ para buscar más raíces:
 $$
@@ -60,4 +60,5 @@ $$
 
 \begin{aportes}
 	\item \aporte{\dirRepo}{naD GarRaz \github}
+	\item \aporte{https://github.com/nick052}{Nico Alegre \github}
 \end{aportes}
