fix ej 24 guia 5

--- a/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-5-5.tex
@@ -11,7 +11,7 @@ $$
   (n^{63} -21 : 13 \cdot 3) = 13 \cdot 3
 $$
 
-\textit{¿Qué información obtenemos de los máximos común múltiplos?: }
+\textit{¿Qué información obtenemos de los MCD?: }
 
 Para que $(n^{109} + 37 : 52) = 26$ debe ocurrir que:
 
