actualizar aportes ej 24 guia 5

--- a/5-guia/ejercicios-5/ej-24-5.tex
+++ b/5-guia/ejercicios-5/ej-24-5.tex
@@ -124,4 +124,5 @@ Voy a buscar primos $p$ que cumplan lo pedido, usando PTF:
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/TotoMC-13}{Tomás A. \github}
 \end{aportes}
